[gd_scene load_steps=5 format=3 uid="uid://oucnua8amyi3"]

[ext_resource type="Script" path="res://core_battle/gui_battle/self_data.gd" id="1_ux126"]
[ext_resource type="Texture2D" uid="uid://c4lvt7y6i6whf" path="res://assets/icons/heart-alt-svgrepo-com.svg" id="2_tkbrt"]
[ext_resource type="Texture2D" uid="uid://2s2kjgtcgrid" path="res://assets/icons/circle-heart-svgrepo-com.svg" id="2_y0b6k"]
[ext_resource type="Texture2D" uid="uid://bvu50dcdkcmhw" path="res://assets/icons/dialpad-circle-svgrepo-com.svg" id="4_7erh7"]

[node name="PlayerData" type="MarginContainer"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -103.0
offset_right = 308.0
offset_bottom = 103.0
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_ux126")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2

[node name="InMarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 10

[node name="VBoxContainer" type="VBoxContainer" parent="InMarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="Name" type="Label" parent="InMarginContainer/VBoxContainer"]
layout_mode = 2
text = "Player"

[node name="LifePanel" type="MarginContainer" parent="InMarginContainer/VBoxContainer"]
layout_mode = 2

[node name="LifeContainer" type="HBoxContainer" parent="InMarginContainer/VBoxContainer/LifePanel"]
layout_mode = 2

[node name="LifePoints" type="Label" parent="InMarginContainer/VBoxContainer/LifePanel/LifeContainer"]
layout_mode = 2
text = "Life Points"

[node name="TextureRect" type="TextureRect" parent="InMarginContainer/VBoxContainer/LifePanel/LifeContainer"]
layout_mode = 2
texture = ExtResource("2_tkbrt")
expand_mode = 3

[node name="LifePointsValue" type="Label" parent="InMarginContainer/VBoxContainer/LifePanel/LifeContainer"]
layout_mode = 2
text = "0"

[node name="LifeSymbols" type="VBoxContainer" parent="InMarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="HB1" type="HBoxContainer" parent="InMarginContainer/VBoxContainer/LifeSymbols"]
layout_mode = 2

[node name="TextureRect1" type="TextureRect" parent="InMarginContainer/VBoxContainer/LifeSymbols/HB1"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_y0b6k")
expand_mode = 3

[node name="TextureRect2" type="TextureRect" parent="InMarginContainer/VBoxContainer/LifeSymbols/HB1"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_y0b6k")
expand_mode = 3

[node name="TextureRect3" type="TextureRect" parent="InMarginContainer/VBoxContainer/LifeSymbols/HB1"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_y0b6k")
expand_mode = 3

[node name="TextureRect4" type="TextureRect" parent="InMarginContainer/VBoxContainer/LifeSymbols/HB1"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_y0b6k")
expand_mode = 3

[node name="TextureRect5" type="TextureRect" parent="InMarginContainer/VBoxContainer/LifeSymbols/HB1"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_y0b6k")
expand_mode = 3

[node name="HB2" type="HBoxContainer" parent="InMarginContainer/VBoxContainer/LifeSymbols"]
layout_mode = 2

[node name="TextureRect6" type="TextureRect" parent="InMarginContainer/VBoxContainer/LifeSymbols/HB2"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_y0b6k")
expand_mode = 3

[node name="TextureRect7" type="TextureRect" parent="InMarginContainer/VBoxContainer/LifeSymbols/HB2"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_y0b6k")
expand_mode = 3

[node name="TextureRect8" type="TextureRect" parent="InMarginContainer/VBoxContainer/LifeSymbols/HB2"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_y0b6k")
expand_mode = 3

[node name="TextureRect9" type="TextureRect" parent="InMarginContainer/VBoxContainer/LifeSymbols/HB2"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_y0b6k")
expand_mode = 3

[node name="TextureRect10" type="TextureRect" parent="InMarginContainer/VBoxContainer/LifeSymbols/HB2"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_y0b6k")
expand_mode = 3

[node name="HB3" type="HBoxContainer" parent="InMarginContainer/VBoxContainer/LifeSymbols"]
layout_mode = 2

[node name="TextureRect6" type="TextureRect" parent="InMarginContainer/VBoxContainer/LifeSymbols/HB3"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_y0b6k")
expand_mode = 3

[node name="TextureRect7" type="TextureRect" parent="InMarginContainer/VBoxContainer/LifeSymbols/HB3"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_y0b6k")
expand_mode = 3

[node name="TextureRect8" type="TextureRect" parent="InMarginContainer/VBoxContainer/LifeSymbols/HB3"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_y0b6k")
expand_mode = 3

[node name="TextureRect9" type="TextureRect" parent="InMarginContainer/VBoxContainer/LifeSymbols/HB3"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_y0b6k")
expand_mode = 3

[node name="TextureRect10" type="TextureRect" parent="InMarginContainer/VBoxContainer/LifeSymbols/HB3"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_y0b6k")
expand_mode = 3

[node name="HB4" type="HBoxContainer" parent="InMarginContainer/VBoxContainer/LifeSymbols"]
layout_mode = 2

[node name="TextureRect6" type="TextureRect" parent="InMarginContainer/VBoxContainer/LifeSymbols/HB4"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_y0b6k")
expand_mode = 3

[node name="TextureRect7" type="TextureRect" parent="InMarginContainer/VBoxContainer/LifeSymbols/HB4"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_y0b6k")
expand_mode = 3

[node name="TextureRect8" type="TextureRect" parent="InMarginContainer/VBoxContainer/LifeSymbols/HB4"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_y0b6k")
expand_mode = 3

[node name="TextureRect9" type="TextureRect" parent="InMarginContainer/VBoxContainer/LifeSymbols/HB4"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_y0b6k")
expand_mode = 3

[node name="TextureRect10" type="TextureRect" parent="InMarginContainer/VBoxContainer/LifeSymbols/HB4"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("2_y0b6k")
expand_mode = 3

[node name="Entropy" type="MarginContainer" parent="InMarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="InMarginContainer/VBoxContainer/Entropy"]
layout_mode = 2

[node name="Chaos" type="Label" parent="InMarginContainer/VBoxContainer/Entropy/VBoxContainer"]
layout_mode = 2
text = "Chaos Counter
"

[node name="ChaosContainer" type="HBoxContainer" parent="InMarginContainer/VBoxContainer/Entropy/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Score" type="MarginContainer" parent="InMarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Score Container" type="HBoxContainer" parent="InMarginContainer/VBoxContainer/Score"]
layout_mode = 2

[node name="Type" type="Label" parent="InMarginContainer/VBoxContainer/Score/Score Container"]
layout_mode = 2
text = "Defense Points"

[node name="Symbol" type="TextureRect" parent="InMarginContainer/VBoxContainer/Score/Score Container"]
layout_mode = 2
texture = ExtResource("4_7erh7")
expand_mode = 3

[node name="Score" type="Label" parent="InMarginContainer/VBoxContainer/Score/Score Container"]
layout_mode = 2
text = "0"
